--- a/Prototype/views/modMessages.ejs
+++ b/Prototype/views/modMessages.ejs
@@ -75,6 +75,9 @@
                 <input type="hidden" name="userId2" value="<%= receiver.userId %>"/>
                 <button type="submit" class="reviewBtn">Review</button>
             </form>
+            <a href="/voiceCall?userId=<%= receiver.userId %>">
+                <button type="submit" class="callBtn">Call</button>
+            </a>
         </div>
         
     <div class="formContainer">
