--- a/Prototype/public/modUsers.css
+++ b/Prototype/public/modUsers.css
@@ -131,8 +131,6 @@ header {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    border: solid 2px black;
-    margin: 10px;
     text-decoration: none;
     color: black;
 }
@@ -144,11 +142,8 @@ header {
 }
 
 .flaggedUser button{
-    padding: 5px 10px;
     font-size: 15px;
-    border-radius: 5px;
     text-align: center;
-    right: 0;
 }
 
 .flagUser{
@@ -176,3 +171,23 @@ video {
     height: 100%;
     object-fit: cover; 
 }
+
+.voiceButton{
+    background-color: white;
+    text-align: center;
+    font-size: 15px;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 15px;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+  
+td, th {
+    border: 5px solid #dddddd;
+    text-align: center;
+}
+  
