--- a/Prototype/views/feed.ejs
+++ b/Prototype/views/feed.ejs
@@ -481,7 +481,7 @@
               </form>
               
               <div style="width: 17px; height: 17px; left: 266px; top: 21px; position: absolute; z-index: 1; color: black; font-size: 12px; font-family: Inter; font-weight: bold; word-wrap: break-word">
-                <%= user.unreadCount %>
+                <%= user.unreadCount %> <!-- get rid of box make yellow number when 0> --> 
               </div>
             </div>
           <!-- <li class="user-info"> -->
